cluster/apps/paperless/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-tailscale
  namespace: paperless
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - paperless
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless
                port:
                  number: 8888
